HousingForce/src/objects/Housing_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_Date_and_Time__c</fullName>
        <label>Arrival Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Housing Assignments</relationshipLabel>
        <relationshipName>Housing_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Housing__c</fullName>
        <label>Housing</label>
        <referenceTo>Housing__c</referenceTo>
        <relationshipLabel>Housing Assignments</relationshipLabel>
        <relationshipName>Housing_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date_and_Time__c</fullName>
        <label>Move Out Date and Time</label>
        <type>DateTime</type>
    </fields>
    <label>Housing Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Housing Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckGender</fullName>
        <active>false</active>
        <description>Checks if this persons gender is correct for the right housing i.e male = male or female = female</description>
        <errorConditionFormula>IF( OR((TEXT(Contact__r.Gender__c) = &apos;Male&apos; &amp;&amp;  TEXT(Housing__r.Group_Designation__c)  = &apos;Men only&apos;),
(TEXT(Contact__r.Gender__c) = &apos;Female&apos; &amp;&amp;  TEXT(Housing__r.Group_Designation__c)  = &apos;Women only&apos;)
),False,TRUE)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>This is wrong gender housing error</errorMessage>
    </validationRules>
</CustomObject>